# finanzonline_databox

./: .gitignore  API_REFERENCE_de.md  API_REFERENCE_en.md  CHANGELOG.md  CLAUDE.md  README.md  README_en.md  pyproject.toml
.github/workflows/: default_cicd_public.yml
docs/prd/: prd.md
notebooks/: Quickstart.ipynb
src/finanzonline_databox/: __init__conf__.py  __main__.py  _format_utils.py  behaviors.py  cli.py  config.py  config_deploy.py  config_schema.py  config_show.py  i18n.py  logging_setup.py  mail.py
src/finanzonline_databox/adapters/finanzonline/: _soap_utils.py  databox_client.py  session_client.py
src/finanzonline_databox/adapters/notification/: email_adapter.py
src/finanzonline_databox/adapters/output/: formatters.py
src/finanzonline_databox/application/: __init__.py  use_cases.py
src/finanzonline_databox/cli/: __init__.py  _app.py  _commands.py  _error_handling.py  _helpers.py  _notifications.py  typed_click.py
src/finanzonline_databox/defaultconfig.d/: 30-logging.toml
src/finanzonline_databox/domain/: __init__.py  models.py
src/finanzonline_databox/locales/de/LC_MESSAGES/: messages.mo
src/finanzonline_databox/locales/es/LC_MESSAGES/: messages.mo
src/finanzonline_databox/locales/fr/LC_MESSAGES/: messages.mo
src/finanzonline_databox/locales/ru/LC_MESSAGES/: messages.mo
tests/: conftest.py  test_cli.py  test_config.py  test_config_show.py  test_i18n.py  test_mail.py  test_metadata.py  test_module_entry.py
tests/adapters/: test_databox_client.py  test_email_adapter.py
tests/application/: test_use_cases.py
tests/domain/: test_errors.py  test_models.py
tests/fakes/: __init__.py  databox_client.py  session_client.py
