[project]
name = "finanzonline_databox"
version = "1.2.16"
description = "Python library and CLI for downloading documents from FinanzOnline Austria DataBox"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich-click>=1.9.7",
    "lib_cli_exit_tools>=2.3.0",
    "lib_log_rich>=6.3.3",
    "lib_layered_config>=5.5.0",
    "btx_lib_mail>=1.3.1",
    "zeep>=4.3.2",
    "filelock>=3.25.2",
    "orjson>=3.11.7",
]
license = { text = "MIT" }
authors = [{ name = "bitranox", email = "bitranox@gmail.com" }]
keywords = ["databox", "documents", "austria", "finanzonline", "tax", "download", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

# System packages required for CI runners (read by GitHub Actions workflow template)
# Format: "apt_package_name" for Ubuntu, future: {"apt": "...", "brew": "...", "choco": "..."}
[tool.ci]
system-dependencies-ubuntu = []
system-dependencies-macos = []
system-dependencies-windows-pip = []
system-dependencies-windows-choco = []
os = ["ubuntu-latest", "windows-latest", "macos-latest"]

[project.urls]
Homepage = "https://github.com/bitranox/finanzonline_databox"
Repository = "https://github.com/bitranox/finanzonline_databox.git"
Issues = "https://github.com/bitranox/finanzonline_databox/issues"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.7",
  "pyright[nodejs]>=1.1.408",
  "bandit>=1.9.4",
  "build>=1.4.2",
  "twine>=6.2.0",
  "codecov-cli>=11.2.7",
  "pip-audit>=2.10.0",
  "textual>=8.1.1",
  "import-linter>=2.11",
  "rtoml>=0.13.0",
]

[project.scripts]
finanzonline_databox = "finanzonline_databox.cli:main"
finanzonline-databox = "finanzonline_databox.cli:main"

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"



[tool.hatch.build.targets.wheel]
packages = ["src/finanzonline_databox"]
include = [
  "src/finanzonline_databox/py.typed",
  "src/finanzonline_databox/defaultconfig.toml",
  "src/finanzonline_databox/defaultconfig.d/*.toml",
  "src/finanzonline_databox/locales/**/*.mo",
]

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# ignore the "unused import sys" in the jupyter notebook - which we need (it is a linter hickup)
"notebooks/*.ipynb" = ["F401"]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = [
  "src",
]
exclude = [
  "scripts/menu.py",
  # zeep SOAP library has no type stubs, causing many reportUnknownMemberType errors
  "src/finanzonline_databox/adapters/finanzonline/session_client.py",
  "src/finanzonline_databox/adapters/finanzonline/databox_client.py",
]

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
pythonpath = ["src"]
markers = [
  "os_agnostic: test runs on every supported operating system",
  "os_windows: test exercises Windows-only behavior",
  "os_macos: test exercises macOS-only behavior",
  "os_posix: test exercises behavior requiring POSIX semantics",
  "os_linux: test exercises Linux-only behavior",
  "local_only: test requires local infrastructure (not run in CI)",
  "integration: test exercises real external services",
]

[tool.coverage.run]
branch = true
parallel = false
data_file = ".coverage.unit"
source = ["src/finanzonline_databox"]

[tool.coverage.report]
omit = [
  "tests/*",
]
# Actual coverage ~90%; buffer for SOAP adapter and notification paths
fail_under = 87
show_missing = true

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

[tool.clean]
# Patterns to remove when running `make clean`
patterns = [
  "**/__pycache__",
  ".hypothesis",
  ".import_linter_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".pyright",
  ".mypy_cache",
  ".tox",
  ".nox",
  ".eggs",
  "*.egg-info",
  "build",
  "dist",
  "htmlcov",
  ".coverage",
  "coverage.xml",
  "codecov.sh",
  ".cache",
  "result",
]

[tool.git]
# Default git remote for push/release commands
default-remote = "origin"


[tool.scripts.test]
# Configuration for scripts/test.py test runner
pytest-verbosity = "-vv"
coverage-report-file = "coverage.xml"
src-path = "src"
[tool.importlinter]
root_package = "finanzonline_databox"

[[tool.importlinter.contracts]]
name = "Clean Architecture layers"
type = "layers"
layers = [
  "finanzonline_databox.adapters",
  "finanzonline_databox.application",
  "finanzonline_databox.domain",
]

[[tool.importlinter.contracts]]
name = "CLI depends on behaviors only"
type = "layers"
layers = [
  "finanzonline_databox.cli",
  "finanzonline_databox.behaviors",
]

[tool.pip-audit]
# Known vulnerabilities to ignore (unfixable or accepted risk)
# GHSA-4xh5-x5gv-qwph: py library ReDoS (no fix available, low risk)
# PYSEC-2022-42969: same as above (alias)
# PYSEC-2022-43012, PYSEC-2025-49, CVE-2024-6345: setuptools vulns (CI uses old version)
# CVE-2025-69277: pynacl 1.6.1 (fix in 1.6.2, awaiting update)
# CVE-2026-21441: urllib3 2.6.2 (fix in 2.6.3, awaiting update)
# CVE-2025-8869: pip tar extraction (Python 3.14 implements PEP 706, not affected)
# CVE-2026-25990: pillow PSD OOB write (not a project dependency, system-level)
ignore-vulns = ["GHSA-4xh5-x5gv-qwph", "PYSEC-2022-42969", "PYSEC-2022-43012", "PYSEC-2025-49", "CVE-2024-6345",
    "CVE-2025-68146", "CVE-2025-69277", "CVE-2026-21441","CVE-2026-1703","CVE-2026-26007",
    "CVE-2025-8869", "CVE-2026-25990", "CVE-2026-4539", "CVE-2026-25645",
]
